--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,6 +1,17 @@
+<div class="main">
+	<br />
+	<div class = "text-box col-xs-10 col-xs-offset-1 text-center">
+		<h1>Welcome to Pajamawork!</h1>
+		<br/>
+		<h1>Here you can find the best remote jobs in town!</h1>
+		<br />
+		<h2>Or the best jobs anywhere really...</h2>
+	</div>
+</div>
+
 <% @job.each do |job| %>
-	<div>
-		<h1><%= job.title %></h1>
+	<div class ="booyah-box col-xs-10-col-xs-offset-1 text-center">
+		<h1><%=link_to job.title, job_path(job) %></h1>
 		<i><%= job.company %></i>
 		<p><%= job.description %></p>
 		<i><%= job.category %></i>
@@ -16,9 +27,9 @@
 				<p><%= link_to job.application, "http://#{job.application}" %></a></p>
 			<% else %>
 			<% end %>
+		<%= image_tag job.logo %>
 	</div>
 
-	<hr />
 <% end %>
 
 <!-- Button trigger modal -->
@@ -47,12 +58,11 @@
 					<%= f.text_area :facebook, label:'Facebook link to your Company', placeholder: 'A URL is not necessary' %>
 					<%= f.text_area :twitter, label:'Twitter link to your Company', placeholder: 'A URL is not necessary' %>
 					<%= f.text_area :application, label:'Where can applicants apply?', placeholder: 'www.pajamawork.com' %>
+					<%= f.file_field :logo, label: 'Upload your logo' %>
+					<small id="fileHelp" class="form-text text-muted">Upload a file of your logo. This will be placed on the job description page.</small>
+					<hr />
 					<%= f.submit 'Post', class: 'btn btn-primary' %>
 				<% end %>
-			  <div class="form-group">
-			    <label for="exampleInputFile">Upload your Logo</label>
-			    <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
-			    <small id="fileHelp" class="form-text text-muted">Upload a file of your logo. This will be placed on the job description page.</small>
 			  </div>
 			</form>
 		</div>	
