--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Farsan');
 
 .modal-title {
 	text-align: center;
@@ -43,13 +44,13 @@ h1, h2, h3, h4, h5, h6, .navbar {
 }
 
 .text-box h1 {
-  font-family: "Helvetica Neue", Helvetica;
+  font-family: 'Farsan', cursive;
   font-weight: 100;
   text-shadow: rgba(0,0,0,0.95) 1px 1px;
 }
 
 .text-box h2 {
-  font-family: "Helvetica Neue", Helvetica;
+  font-family: 'Farsan', cursive;
   font-weight: 200;
   text-shadow: rgba(0,0,0,0.95) 1px 1px;
 }
@@ -62,7 +63,21 @@ h1, h2, h3, h4, h5, h6, .navbar {
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   margin-top:10px;
-  margin-bottom:15px;
+  margin-bottom:10px;
   padding:20px;
+}
+
+.navbar .navbar-inverse {
+	border-radius: 0;
+  box-shadow: 0px 1px 3px #2a2a2a;
+}
+
+.navbar-inverse .navbar-brand {
+	font-family: 'Farsan', cursive;
+}
+
+body {
+	font-family: 'Farsan', cursive;
+	background: url('redox_02.png')
 }
 
