--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,46 +24,17 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><%= link_to 'Programming Jobs', programming_jobs_path %></li>
-        <li><%= link_to 'Design Jobs', design_jobs_path %></li>
-        <li><%= link_to 'Customer Support Jobs', customer_support_jobs_path %></li>
-        <li><%= link_to 'Sales/Account Management Jobs', sales_account_management_jobs_path %></li>
-        <li><%= link_to 'Marketing Jobs', marketing_jobs_path %></li>
-        <li><%= link_to 'All Other Jobs', other_jobs_path %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
+          
+            <li><%= link_to 'Programming Jobs', programming_jobs_path %></li>
+            <li><%= link_to 'Design Jobs', design_jobs_path %></li>
+            <li><%= link_to 'Customer Support Jobs', customer_support_jobs_path %></li>
+            <li><%= link_to 'Sales/Account Management Jobs', sales_account_management_jobs_path %></li>
+            <li><%= link_to 'Marketing Jobs', marketing_jobs_path %></li>
+            <li><%= link_to 'All Other Jobs', other_jobs_path %></li>
       </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Post a job2
-        </button>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
+
+             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Post a job for $100
+         </button>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
