--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -11,21 +11,27 @@
 </div>
 
 <% @job.each do |job| %>
-		<div class ="booyah-box col-xs-6 col-xs-offset-3">
-			<div class = "col-xs-4 company"><%= job.company %></div>
-			<div class = "col-xs-4 title"><%=link_to job.title, job_path(job) %></div>
-			<div class = "col-xs-2 category"><%= job.category %></div>
-			<div class = "col-xs-2 application"><% if job.application.present? %>
-						<button><%= link_to "Apply Here!", "http://#{job.application}", :target => "_blank" %></button>
+		<div class ="booyah-box col-xs-8 col-xs-offset-2">
+			<div class = "col-xs-2 logo"><span><%=image_tag job.logo %></span></div>
+			<div class = "col-xs-3 company"><span><%= job.company %></span></div>
+			<div class = "col-xs-4 title"><span><%=link_to job.title, job_path(job) %></span></div>
+			<div class = "col-xs-2 category"><span><%= job.category %></span></div>
+			<div class = "col-xs-1 application"><% if job.application.present? %>
+						<%= link_to "http://#{job.application}", :class => "button btn btn-primary" do %>
+				  		Apply Here!
+				  	<% end %>
 					<% else %>
 					<% end %>
-			<ul class= "list-unstyled">
+				<br />
+				<br />
+				
+				  <span class="button-right"></span>
+				
 				<% if job.created_at > Time.now.beginning_of_day %>
-		    		<li class="text-right">Posted <%="#{time_ago_in_words(job.created_at)} ago"%> </li>
+		    		<span>Posted <%="#{time_ago_in_words(job.created_at)} ago"%></span>
 				<% else %>
-		   	 		<li class="text-right">Posted <%= job.created_at.strftime("%b %d, %Y") %></li>
+		   	 		<span>Posted <%= job.created_at.strftime("%b %d, %Y") %></span>
 				<% end %>
-			</ul>
 			</div>
 		</div>
 <% end %>
