--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -14,7 +14,8 @@
 		<div class ="booyah-box col-xs-8 col-xs-offset-2">
 			<div class = "col-xs-2 logo"><span><%=image_tag job.logo %></span></div>
 			<div class = "col-xs-3 company"><span><%= job.company %></span></div>
-			<div class = "col-xs-4 title"><span><%=link_to job.title, job_path(job) %></span></div>
+			<div class = "col-xs-4 title"><span> <%=link_to job.title, job_path(job) %>
+			</span></div>
 			<div class = "col-xs-2 category"><span><%= job.category %></span></div>
 			<div class = "col-xs-1 application"><% if job.application.present? %>
 						<%= link_to "http://#{job.application}", :class => "button btn btn-primary" do %>
