--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,19 +1,59 @@
-<div class = "container">
-	<h1><%= @job.title %></h1>
-	<i><%= @job.company %></i>
-	<p><%= @job.description %></p>
-	<i><%= @job.category %></i>
-		<% if @job.facebook.present? %>
-			<p><%= link_to @job.facebook, "http://#{@job.facebook}" %></p>
-		<% else %>
-		<% end %>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="col-xs-6 col-xs-offset-3">
+    	<div class ="booyah-box">
+			<h1><%= @job.title %></h1>
+			<br />
+			<h1><%= @job.description.html_safe %>
+			<h4><% if @job.created_at > Time.now.beginning_of_day %>
+		    <span>Posted <%="#{time_ago_in_words(@job.created_at)} ago"%></span>
+				<% else %>
+		   	 <span>Posted <%= @job.created_at.strftime("%b %d, %Y") %></span>
+				<% end %>
+			</h4>
+			</br>
+			</br>
+			<h2 ><%= @job.company %></h2>
+			<h5><% if @job.application.present? %>
+				<p><%= link_to @job.application, "http://#{@job.application}" %></a></p>
+				<% else %>
+				<% end %>
+			</h5>
+		</div>
+	</div>
+      <!--Body content-->
+
+  	<div class="col-xs-2">
+  
+    	<div class = "booyah-box side-panel">
+    	<% if @job.facebook.present? %>
+			<%= link_to "http://#{@job.facebook}" do %>
+				<%= image_tag "facebook.png", :width => 75, :height => 75 %>
+				<% end %>
+			<% end %>
 		<% if @job.twitter.present? %>
-			<p><%= link_to @job.twitter, "http://#{@job.twitter}" %></a></p>
+			<%= link_to "http://#{@job.twitter}" do %>
+				<%= image_tag "twitter.png", :width => 75, :height => 75 %>
+			<% end %>
 		<% else %>
 		<% end %>
 		<% if @job.application.present? %>
 			<p><%= link_to @job.application, "http://#{@job.application}" %></a></p>
 		<% else %>
 		<% end %>
-	<%= image_tag @job.logo %>
+			<%= image_tag @job.logo %>
+			<br />
+			<% if @job.created_at > Time.now.beginning_of_day %>
+		    <span>Posted <%="#{time_ago_in_words(@job.created_at)} ago"%></span>
+				<% else %>
+		   	 <span>Posted <%= @job.created_at.strftime("%b %d, %Y") %></span>
+			<% end %>
+		</div>
+	</div>
+  </div>
 </div>
+
+
+
+
+
