--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
             <li><%= link_to 'All Other Jobs', other_jobs_path %></li>
       </ul>
 
-             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Post a job for $100
+             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Post a job for Free!
          </button>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -69,6 +69,7 @@
           <small id="fileHelp" class="form-text text-muted">Upload a file of your logo. This will be placed on the job description page. ALL logos will be resized to 100px by 100px.</small>
           <hr />
           <%= f.submit 'Post', class: 'btn btn-primary' %>
+          
         <% end %>
         </div>
       </form>
