--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,24 +18,30 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
+
       </button>
-      <a class="navbar-brand" <%= link_to'Pajamawork', root_path %>></a>
+
+     
     </div>
 
+
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-          
+    <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1" >
+
+      <span class= "nav navbar-nav " >
+             <a class="navbar-brand" <%= link_to'Pajamawork', root_path %>></a>
             <li><%= link_to 'Programming Jobs', programming_jobs_path %></li>
             <li><%= link_to 'Design Jobs', design_jobs_path %></li>
             <li><%= link_to 'Customer Support Jobs', customer_support_jobs_path %></li>
             <li><%= link_to 'Sales/Account Management Jobs', sales_account_management_jobs_path %></li>
             <li><%= link_to 'Marketing Jobs', marketing_jobs_path %></li>
             <li><%= link_to 'All Other Jobs', other_jobs_path %></li>
-      </ul>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Post a job for Free!
+           </button>
+         
+      </span>
 
-             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Post a job for Free!
-         </button>
+           
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
