fixing text box for other screens sizes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1" >
 
-      <span class= "nav navbar-nav " >
+      <ul class= "nav navbar-nav " >
              <a class="navbar-brand" <%= link_to'Pajamawork', root_path %>></a>
             <li><%= link_to 'Programming Jobs', programming_jobs_path %></li>
             <li><%= link_to 'Design Jobs', design_jobs_path %></li>
@@ -39,7 +39,7 @@
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Post a job for Free!
            </button>
          
-      </span>
+      </ul>
 
            
     </div><!-- /.navbar-collapse -->
