--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -16,9 +16,20 @@ body {
             padding-bottom: 20px;
         }
 
-body { padding-top: 40px; }
+
 @media screen and (max-width: 768px) {
-    body { padding-top: 0px; }
+    
+    .text-box {padding-top: 80px; }
+}
+
+@media screen and (max-width: 1024px) {
+   
+    .text-box {padding-top: 90px; }
+}
+
+@media screen and (min-width: 768px) {
+    
+    .text-box {padding-top: 100px; }
 }
 
 @media (max-width: 768px){
@@ -45,13 +56,8 @@ h1, h2, h3, h4, h5, h6, .navbar {
 .text-box {
   background:rgba(0,0,0, 0.8);
   color:white;
-  position: absolute;
-  width: 500px;
-  height: 200px;
-  z-index: 15;
-  top: 50%;
-  left: 50%;
-  margin: -350px 0 0 -250px;;
+  
+  
 }
 
 .text-box h1 {
