--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="main">
 	<br />
-	<div class = "text-box col-xs-10 col-xs-offset-1 text-center">
+	<div class = "container-fluid text-box col-xs-10 col-xs-offset-1 text-center">
 		<h1>Welcome to Pajamawork!</h1>
 		<br/>
 		<h1>Here you can find the best remote jobs in town!</h1>
