Added margin top text box

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -19,17 +19,17 @@ body {
 
 @media screen and (max-width: 768px) {
     
-    .text-box {padding-top: 80px; }
+    .text-box {margin-top: 80px; }
 }
 
 @media screen and (max-width: 1024px) {
    
-    .text-box {padding-top: 90px; }
+    .text-box {margin-top: 90px; }
 }
 
 @media screen and (min-width: 768px) {
     
-    .text-box {padding-top: 100px; }
+    .text-box {margin-top: 100px; }
 }
 
 @media (max-width: 768px){
