--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -19,17 +19,20 @@ body {
 
 @media screen and (max-width: 768px) {
     
-    .text-box {margin-top: 80px; }
+    .text-box {margin-top: 80px; background:rgba(0,0,0, 0.8) }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px ) {
    
-    .text-box {margin-top: 90px; }
+    .text-box {margin-top: 90px; background:rgba(0,0,0, 0.8) }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
     
-    .text-box {margin-top: 100px; }
+    .text-box {margin-top: 100px;
+      h1 span  {background:rgba(0,0,0, 0.8); }
+      h2 span {background:rgba(0,0,0, 0.8);}
+ }
 }
 
 @media (max-width: 768px){
@@ -51,25 +54,29 @@ body {
 h1, h2, h3, h4, h5, h6, .navbar {
   margin:0;
   padding:0;
+
 }
 
 .text-box {
-  background:rgba(0,0,0, 0.8);
+  
   color:white;
   
-  
 }
+
+
 
 .text-box h1 {
   font-family: 'Farsan', cursive;
   font-weight: 100;
   text-shadow: rgba(0,0,0,0.95) 1px 1px;
+
 }
 
 .text-box h2 {
   font-family: 'Farsan', cursive;
   font-weight: 200;
   text-shadow: rgba(0,0,0,0.95) 1px 1px;
+
 }
 
 .booyah-box {
