--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,11 +2,11 @@
 <div class="main">
 	<br />
 	<div class = "container-fluid text-box col-xs-10 col-xs-offset-1 text-center">
-		<h1>Welcome to Pajamawork!</h1>
+		<h1><span>Welcome to Pajamawork!</h1></span>
 		<br/>
-		<h1>Here you can find the best remote jobs in town!</h1>
+		<h1><span>Here you can find the best remote jobs in town!</span></h1>
 		<br />
-		<h2>Or the best jobs anywhere really...</h2>
+		<h2><span>Or the best jobs anywhere really...</span></h2>
 	</div>
 </div>
 
