fixed homepage bugs for scrolling and screen minimizing

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -217,4 +217,25 @@ span {
     
 }
 
+.listings {
+      display: flex;
+    align-items: stretch; /* Default */
+    justify-content: space-between;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+}
+
+.listings > li {
+   
+    display: block;
+    flex: 0 1 auto; /* Default */
+    list-style-type: none;
+    font-size: 20px;
+    text-align: center;
+    
+    
+}
+
 
