--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="main">
 	<br />
-	<div class = "container-fluid text-box col-xs-10 col-xs-offset-1 text-center">
+	<div class = " text-box col-xs-10 col-xs-offset-1 text-center">
 		<h1><span>Welcome to Pajamawork!</h1></span>
 		<br/>
 		<h1><span>Here you can find the best remote jobs in town!</span></h1>
@@ -9,15 +9,16 @@
 		<h2><span>Or the best jobs anywhere really...</span></h2>
 	</div>
 </div>
-
 <% @job.each do |job| %>
+
 		<div class ="booyah-box col-xs-8 col-xs-offset-2">
-			<div class = "col-xs-2 logo"><span><%=image_tag job.logo %></span></div>
-			<div class = "col-xs-3 company"><span><%= job.company %></span></div>
-			<div class = "col-xs-4 title"><span> <%=link_to job.title, job_path(job) %>
-			</span></div>
-			<div class = "col-xs-2 category"><span><%= job.category %></span></div>
-			<div class = "col-xs-1 application"><% if job.application.present? %>
+		<ul class = "listings">
+			<li><%=image_tag job.logo %></li>
+			<li><%= job.company %></li>
+			<li> <%=link_to job.title, job_path(job) %>
+			</li>
+			<li><%= job.category %></li>
+			<li><% if job.application.present? %>
 						<%= link_to "http://#{job.application}", :class => "button btn btn-primary" do %>
 				  		Apply Here!
 				  	<% end %>
@@ -26,14 +27,16 @@
 				<br />
 				<br />
 				
-				  <span class="button-right"></span>
+				 
 				
 				<% if job.created_at > Time.now.beginning_of_day %>
 		    		<span>Posted <%="#{time_ago_in_words(job.created_at)} ago"%></span>
 				<% else %>
 		   	 		<span>Posted <%= job.created_at.strftime("%b %d, %Y") %></span>
 				<% end %>
-			</div>
+			<li>
+		</ul>
 		</div>
+
 <% end %>
 
