added footer with email address

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,7 +87,23 @@
   </div>
 </div>
 
+  
 <%= yield %>
+  </div>
+<div class="container">
+  <div class="footer">
+    <div class="container">
+      <div class = "col-xs-12">
+        <address>
+        </br>
+        With any comments, questions, or concerns, please contact <a href = "mailto:jvargas@pajamawork.io">Jade Vargas</a> at <a href ="mailto:jvargas@pajamawork.io">jvargas@pajamawork.io</a>.
+        He is a one man band working on this website.
+        </br>
+        Proudly built in Madison, WI!
+        </address>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
