added breaks for jobs pages

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -89,7 +89,7 @@ h1, h2, h3, h4, h5, h6, .navbar {
   margin-top:5px;
   margin-bottom:5px;
   padding:20px;
-}
+ }
 
 .navbar .navbar-inverse {
 	border-radius: 0;
@@ -102,7 +102,7 @@ h1, h2, h3, h4, h5, h6, .navbar {
 
 body {
 	font-family: 'Farsan', cursive;
-	background: url('redox_02.png')
+	background: url('redox_02.png');
 }
 
 
@@ -241,6 +241,7 @@ span {
 .footer {
   text-align: right;
   font-size: 20px;
+
 }
 
 
