--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,9 @@
 
   
 <%= yield %>
-  </div>
+</br>
+</br>
+<footer class = "footer">
 <div class="container">
   <div class="footer">
     <div class="container">
@@ -104,6 +106,6 @@
       </div>
     </div>
   </div>
-
+</footer>
 </body>
 </html>
