--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -32,12 +32,12 @@
   
     	<div class = "booyah-box side-panel">
     	<% if @job.facebook.present? %>
-			<%= link_to "http://#{@job.facebook}" do %>
+			<%= link_to "https://#{@job.facebook}" do %>
 				<%= image_tag "facebook.png", :width => 75, :height => 75 %>
 				<% end %>
 			<% end %>
 		<% if @job.twitter.present? %>
-			<%= link_to "http://#{@job.twitter}" do %>
+			<%= link_to "https://#{@job.twitter}" do %>
 				<%= image_tag "twitter.png", :width => 75, :height => 75 %>
 			<% end %>
 		<% else %>
